--- a/src/styles/box.css
+++ b/src/styles/box.css
@@ -8,8 +8,8 @@
   margin: auto;
   margin-top: 100px;
 }
-.box h1 {
-  margin: auto;
+h1 {
+  margin: 2em;
 }
 .first-slider {
   justify-content: space-evenly;
@@ -18,50 +18,86 @@
 .second-slider {
   justify-content: space-evenly;
   width: 80%;
+  margin-top: 3em;
 }
 
-.box #first-start-range {
+#first-start-range {
   text-align: start;
 }
 #first-end-range {
   text-align: end;
 }
-
 input[type="range"] {
   width: 400px;
   background-color: #ffffff;
 }
-input[type="submit"] {
-  border: 0;
+input[type="number"] {
+  border: 1px solid #ffffff;
   background: none;
-  box-shadow: none;
-  border-radius: 0px;
+  width: 100px;
+  height: 25px;
+  font-size: 1em;
+  font-weight: bold;
+  text-align: center;
+  color: #ffffff;
+  background-color: transparent;
 }
-.buttons {
-  margin: 0px;
-  padding: 0px;
-  display: flex;
-  width: 70%;
-  justify-content: space-between;
+input[type="text"] {
+  border: 1px solid #ffffff;
+  background: none;
+  width: 100px;
+  height: 25px;
+  font-size: 1em;
+  font-weight: bold;
+  text-align: center;
+  color: #ffffff;
+  background-color: transparent;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 .cuotasFijas {
   display: flex;
+  height: 30px;
   background-color: rgba(0, 0, 0, 0.185);
   padding: 10px;
-  font-size: 2em;
+  width: 80%;
+  margin: 0px;
+  margin-top: 3em;
+  align-items: center;
   justify-content: space-between;
+  font-weight: bold;
 }
-.cuotasFijas #cFijas {
+#cFijas {
+  padding: 10px;
   font-size: 1em;
 }
-#cvalor {
+#cValor {
+  padding: 10px;
+  font-size: 2em;
+}
+.buttons {
+  display: flex;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.411);
+  width: 80%;
+  padding: 10px;
+  justify-content: space-between;
+  height: 30px;
 }
 #btn1 {
+  height: 50px;
+  margin-right: 15px;
+  margin-left: -10px;
+  width: 70%;
   color: #ffffff;
-  padding: 1em;
+  font-weight: bold;
   box-shadow: 0px 0px 0px transparent;
   border: 0px solid transparent;
   text-shadow: 0px 0px 0px transparent;
+  font-size: 1em;
   background-color: #17aa8d;
 }
 #btn1:hover {
@@ -71,7 +107,11 @@ input[type="submit"] {
   text-shadow: 0px 0px 0px transparent;
 }
 #btn2 {
-  padding: 0.5em;
+  margin-right: -10px;
+  height: 50px;
+  width: 40%;
+  font-weight: bold;
+  font-size: 1em;
   color: #ffffff;
   background-color: #1b7eca;
   box-shadow: 0px 0px 0px transparent;
@@ -86,8 +126,7 @@ input[type="submit"] {
 }
 .textRange {
   display: flex;
-  font-weight: bold;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 .firstLabel {
   margin: auto;
@@ -100,4 +139,10 @@ input[type="submit"] {
   padding: 0;
   display: flex;
   justify-content: space-between;
+}
+.first-range {
+  margin-right: 10em;
+}
+.second-range {
+  margin-left: 10em;
 }
